# ev

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  run.sh
.github/workflows/: build-docs.yml  build-ev.yml  deploy-docs-ghpage.yml  publish-docs-image.yml  publish-ev-image.yml
docs/: Dockerfile  _proposal.qmd  _quarto-website.yml  _quarto.yml  build.py  build.sh  build.yml  check.py  cva6-xif-spec.md  cva6.qmd  index.qmd  pager.qmd  proposal.qmd  resolve.py
docs/_include/: _generate_metadata_tex.py  _graphviz_gfm_filter.lua  _regseal.qmd  _updated_docs_list.qmd  author.founder.yml
docs/_utils/: generate_latest_docs.py  generate_llms_txt.py  sign_c2pa.py
docs/arch/: .gitignore  generate.py
docs/devlog/: 20260627a.md
docs/notes/: cross-validation-cva6.md  cva6-xif-analysis.md  cva6-xif-spec.md
notes/: cross-validation-cva6.md
scripts/: ci-integration.sh  ci.sh  demo-poc.sh  demo-ssccs-poc.sh
scripts/synth/: default-synth.py  default-synth.sh  yosys-synth.sh
src/: compose.rs  evaluate.rs  fih.rs  format.rs  lib.rs  main.rs  registry.rs  report.rs  reporter.rs  spec.rs  synth.rs  xif.rs
src/format/: mod.rs  xif.rs
src/report/: fih.rs  mod.rs  reporter.rs
src/synth/: mod.rs  sim.rs
src/verify/: compose.rs  evaluate.rs  mod.rs  registry.rs
tests/: cli_test.rs
tests/fixtures/: all_pass.xif.yaml  cva6_xif_encoding.xif.yaml  cva6_xif_mac.xif.yaml  cva6_xif_ref.xif.yaml  cva6_xif_ref_r4.xif.yaml  ibex_alu_ext.xif.yaml  malformed_bad_type.xif.yaml  rv32i_csr_access.xif.yaml  sample.xif.yaml
(+12 files in other folders)
